--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:exported="false"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name=".Login"
+            android:name=".authorization.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,14 +31,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Registration"
+            android:name=".authorization.Registration"
             android:exported="false" />
         <activity
-            android:name=".QRCodeScanner"
+            android:name=".addelements.QRCodeScanner"
             android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false"></activity>
     </application>
 
 </manifest>
